syntax = "proto3";

package devmath;

option java_package = "com.roopy.model";
option java_multiple_files = true;

message SquareRequest {
  int32 number = 1;
}

message SquareResponse {
  int32 number = 1;
  int32 result = 2;
}

service SquareRpc {
  rpc findSquareUnary(SquareRequest) returns (SquareResponse) {};
  rpc findSquareBiStream(stream SquareRequest) returns (stream SquareResponse) {};
}